# pauldot

./: .gitignore  404.html  ANALYSIS.md  CLAUDE.md  Makefile  README.md  SPEC.md  SPEC_REFACTOR.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
docs/: index.md
docs/flows/: aliases.md  bootstrap.md  migrate.md  profiles.md  tools.md  track.md
flows/aliases/: index.html
flows/bootstrap/: index.html
flows/migrate/: index.html
flows/profiles/: index.html
flows/tools/: index.html
flows/track/: index.html
pauldot/: __main__.py  absorb.py  apply.py  cli.py  config.py  display.py  dotfiles.py  encryption.py  gh.py  git.py  help_text.py  migrate.py  port.py  profiles.py  scaffold.py  shell.py  state.py  sync.py  tools.py  zshrc.py
pauldot/commands/: alias.py  help.py  profile.py  tool.py
pauldot/templates/scaffold/files/: aliases.zsh  zshrc.base
pauldot/templates/scaffold/profiles/: base.toml  personal.toml
pauldot/templates/scaffold/tools/: tools.toml
search/: search_index.json
templates/scaffold/: bootstrap.sh  pauldot.toml
templates/scaffold/files/: aliases.zsh  zshrc.personal
templates/scaffold/profiles/: base.toml
templates/scaffold/secrets/: recipients.txt
templates/scaffold/tools/: tools.toml
tests/: conftest.py  test_absorb.py  test_alias.py  test_apply.py  test_clean.py  test_config.py  test_doctor.py  test_dotfiles.py  test_encryption.py  test_git.py  test_migrate.py  test_port.py  test_profiles.py  test_scaffold.py  test_sync_integration.py  test_tools.py  test_zshrc.py
